syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Paypal;

message PaypalPublicSettings {
  bool Enabled = 1;
  string Url = 2;
  string ClientID = 3;
}

message PaypalOwnerSettings {
  string ClientSecret = 1;
}
